* Tue Dec 13 2016 Nick Markowski <nmarkowski@keywcorp.com> - 7.0.0-0
- Updated global catalysts
- Refactored module

* Thu Dec 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
- Updated to use the environment-aware rsync in SIMP 6

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 6.0.0-0
- Bump major version number for SIMP 6

* Tue Nov 22 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.4-0
- Minor cleanup

* Tue Nov 15 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.4-0
- Updated iptables dependency version

* Tue Aug 02 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.2-0
- Update to the new naming scheme

* Sat May 14 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.1-0
- Update to fix the absence of the `logdir` variable after the v2/v3 refactor.

* Mon Mar 14 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Ensure Puppet 4 compatibility. This changes the (always incorrect, but
  allowed) '2' and '3' paths to 'v2' and 'v3'.
  - Be sure to check and update your Hiera data!
- Fixed the case where the `radius_version` fact does not exist.

* Wed Dec 02 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.2.0-6
- Replaced all 'lsb*' facts with their (package-independent)
  'operatingsystem*' counterparts.
- Common module assets have been normalized.
- Fixed a bug with the radius_rsync_user passgen.

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.2.0-5
- migration to simplib and simpcat (lib/ only)

* Mon Jun 29 2015 Nick Miller <nick.miller@onyxpoint.com> - 4.2.0-4
- Moved validation from the templates and put them in their own
  functions

* Thu Feb 19 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-3
- Migrated to the new 'simp' environment.

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-2
- Changed puppet-server requirement to puppet

* Fri Dec 19 2014 Kendall Moore <kmoore@keywcorp.com> - 4.2.0-1
- Added default site and updated LDAP module.
