@@ -49,21 +49,21 @@ end
 
 shared_examples_for 'config with pki = false and firewall = false' do
   it { is_expected.to_not contain_class('pki') }
-  it { is_expected.to_not contain_pki__copy('/etc/radius_simp')}
-  it { is_expected.to create_file('/etc/radius_simp/pki')}
+  it { is_expected.to_not contain_pki__copy('freeradius')}
+  it { is_expected.to_not create_file('/etc/pki/simp_apps/freeradius/x509')}
   it { is_expected.to_not contain_iptables__listen__udp('radius_iptables')}
 end
 
 shared_examples_for 'config with pki = true' do
   it { is_expected.to_not contain_class('pki')}
-  it { is_expected.to create_file('/etc/radius_simp') }
-  it { is_expected.to contain_pki__copy('/etc/radius_simp').with(:source => '/etc/pki/simp') }
+  it { is_expected.to create_file('/etc/pki/simp_apps/freeradius/x509') }
+  it { is_expected.to contain_pki__copy('freeradius').with(:source => '/etc/pki/simp/x509') }
 end
 
 shared_examples_for 'config with pki = simp and firewall = true' do
   it { is_expected.to contain_class('pki') }
-  it { is_expected.to create_file('/etc/radius_simp') }
-  it { is_expected.to contain_pki__copy('/etc/radius_simp').with(:source => '/etc/pki/simp') }
+  it { is_expected.to create_file('/etc/pki/simp_apps/freeradius/x509') }
+  it { is_expected.to contain_pki__copy('freeradius').with(:source => '/etc/pki/simp/x509') }
   it { is_expected.to contain_iptables__listen__udp('radius_iptables')}
 end
 
